<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <RelativeLayout
        android:id="@+id/rl_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_airrobe_logo"
            android:contentDescription="@string/logo_content_description" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/close_content_description" />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_title_container" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/airrobe_learn_more_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_step1_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/learn_more_step_background">

        <TextView
            android:id="@+id/tv_step1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/airrobe_learn_more_step1_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:drawableEnd="@drawable/ic_check_in_circle"
            android:padding="10dp" />

        <View
            android:id="@+id/step1_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_step1_title" />

        <TextView
            android:id="@+id/tv_step1_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/step1_divider"
            android:text="@string/airrobe_learn_more_step1_description"
            android:textSize="14sp"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/iv_plant1"
            android:layout_width="14dp"
            android:layout_height="36dp"
            android:layout_below="@id/tv_step1_description"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="-10dp"
            android:src="@drawable/ic_plant"
            android:contentDescription="@string/plant_content_description" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/rl_step1_container"
        android:layout_marginTop="20dp"
        android:text="@string/airrobe_learn_more_question"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/tv_question"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/airrobe_learn_more_answer"
        android:textSize="13sp"
        android:textAlignment="center"
        android:gravity="center"/>

    <RelativeLayout
        android:id="@+id/rl_step2_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_answer"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/learn_more_step_background">

        <TextView
            android:id="@+id/tv_step2_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/airrobe_learn_more_step2_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:drawableEnd="@drawable/ic_smile_emoji" />

        <View
            android:id="@+id/step2_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_step2_title" />

        <TextView
            android:id="@+id/tv_step2_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/step2_divider"
            android:text="@string/airrobe_learn_more_step2_description"
            android:textSize="14sp"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/iv_plant2"
            android:layout_width="14dp"
            android:layout_height="36dp"
            android:layout_below="@id/tv_step2_description"
            android:src="@drawable/ic_plant"
            android:layout_marginTop="-20dp"
            android:layout_marginBottom="-10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/plant_content_description" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/rl_step2_container"
        android:layout_marginTop="20dp"
        android:text="@string/airrobe_learn_more_ready"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center" />

    <TextView
        android:id="@+id/tv_toggle_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/tv_ready"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/airrobe_learn_more_toggle_on"
        android:textSize="15sp"
        android:textAlignment="center"
        android:gravity="center" />

    <RelativeLayout
        android:id="@+id/rl_toggle_container"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/tv_toggle_on"
        android:layout_centerHorizontal="true"
        android:background="@drawable/learn_more_toggle_container_background">

        <Switch
            android:id="@+id/opt_in_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_find_out_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_toggle_container"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="@string/airrobe_learn_more_find_more_text"
        android:textSize="14sp" />

</RelativeLayout>