<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/layout_opt_in_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Switch
            android:id="@+id/opt_in_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:thumb="@drawable/airrobe_switch_thumb_enhanced"
            android:track="@drawable/airrobe_switch_track_enhanced" />

        <LinearLayout
            android:id="@+id/ll_switch_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airrobe_add_to"
                    android:textSize="14sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="3dp" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_airrobe_logo"
                    android:scaleType="fitCenter"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/tv_title"
                    android:contentDescription="@string/logo_content_description" />

                <ImageView
                    android:id="@+id/iv_arrow_down"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_arrow"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/arrow_content_description" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airrobe_description_enhanced"
                android:textSize="13sp"
                android:singleLine="true"
                android:layout_marginTop="3dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_detailed_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/airrobe_detailed_description_enhanced"
        android:textSize="12sp"
        android:layout_marginTop="5dp" />

</LinearLayout>